examples/test/testpolicy19798.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19798
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key11: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value33
          key6: value48
          key33: value26
      podSelector:
        matchLabels:
          key6: value20
          key26: value23
          key14: value18
